[package]
authors = ["Haobo Gu <haobogu@outlook.com>"]
edition = "2021"
readme = "README.md"
name = "algorithm"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.7", features = ['critical-section-single-core'] }
cortex-m-rt = "0.7.3"
flash-algorithm = { version = "0.4.0" }
# embassy-stm32 = { version = "0.1", git = "https://github.com/embassy-rs/embassy", rev = "6da53f0", features = [
embassy-stm32 = { version = "0.1", path = "/Users/haobogu/Projects/rust/embassy/embassy-stm32", features = [
    "stm32h7b0vb",
    "time-driver-any",
] }
# embassy-executor = { version = "0.6", git = "https://github.com/embassy-rs/embassy", rev = "6da53f0", features = [
embassy-executor = { version = "0.6", path = "/Users/haobogu/Projects/rust/embassy/embassy-executor", features = [
    # "defmt",
    "arch-cortex-m",
    "task-arena-size-16384",
    "executor-thread",
    "integrated-timers",
] }

# embassy-futures = { version = "0.1", git = "https://github.com/embassy-rs/embassy", rev = "6da53f0" }
embassy-futures = { version = "0.1", path = "/Users/haobogu/Projects/rust/embassy/embassy-futures" }

# this lets you use `cargo fix`!
[[bin]]
name = "algorithm"
test = false
bench = false

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
